lab1/Test/L1-A-13-30.output
Error Type B at Line 9
Error Type A at Line 12
Error Type B at Line 26
Error Type B at Line 28
Error Type B at Line 36
Error Type B at Line 38
Error Type B at Line 48
Error Type B at Line 51
Error Type B at Line 57
