lab1/Test/L1-A-13-30.cmm
int ;
struct {
  struct {
    struct {
      int xSFq4IGLTqqYL3c9Yf ;
      struct dCn1WETqU0dlZ0cg7zF JMGgUcEgItG ;
      struct TiPr7tt r ;
    }ioU2qjg0jKSD2p0 ;
  }SshL5l19RVN1Q_aOoi ) ;
  struct VcY9wy6kS eTX9JsuS945l1KUH ;
  struct gUBlqxMRxudzb {
    int v9cmuOmp &;
  }VjPF9QzSCtX27jTrZ6e ;
  struct JzJjT00oU q9xJG ;
  struct sGJh9AZT kxnTqHJ ;
  struct k4g XSX2qn , lx = o8yjtylIEQ7Rc || pnTK == 
    qSz7VXEV5orzYNau4DLH - ! - - ! sw7YFSp51 [ fssk0p9y6go1d05aKHqW 
    = TXAiKGdTe = YSfxfhfXape && jr <= tFkwhu2_yLpeMuXV 
    * tl31toetu ( Qgn_D7 , NXq6s7vSGNETWNlZGp12 && RSS_601IhZRz 
    >= jpIt4ysg + D4NVAeGhcctgj / ! VHE7BT1GTi [ yrymdcESJN0OsIH 
    ( xiVp97LLAUrs9GM = L0NUeROkzyOhTTSoHUcm = z7os0fx_xU 
    != mwCg + bLIW2u7HbknFbm / hUNvCIaAOGgDCt0 [ rU6RNOtn 
    = rYcg7IqCqKE && iFZ7G5ia < ZtPDMnLp3oKs89_xBa6G + 
    L885y / LGCmIJR3C [ Z8Pj6m9IfIwQQBZ = vrDfdnN7NyiGv 
    > HjVd2C91Y5OTgHySyl + d * D [ ! ( VVZiTSfHmxYKQs0HunyJ 
    ) ] + j0yGVghi13mSbpTOuoK ] ] 1611874869 ) ] * 47456411.466934020 
    . DrB4M0HFzesk5z ) ] / Xgile ( ) ;
}WfazzxIEYFZvO0V6eQu return 
;
int HLlpPlRkYhXBFE ( float UNOzRGhARMgKdAW34h1 [ 146924343 
  ] ) {
}
int ;
int Lb , ykidG4S1GBEP3gO 

;!= 
int 
int ;
int UakrAc1Gn6ZpDFEsZn ( ) {
  if ( F1F )   while ( FLURZlitD3UDmj4 ) {
  }
else   if ( bPv8UxU )   if ( HNvsjJi7WkqFBs4zW )   return 
    ohfjVPXHfXYL9Nk ;
else   GTDH 



}
int XMAwOG3U7s6 ( ) {
}
int ;= 
int ;
int ;
int r0xBgV9sLSPFFOVGg ( int L_d , int t554sHPqAQ_g 
  ) {
}
int 